UserService getUserByEmail use